style: fix loading page not showing after the previous modification in layout

--- a/src/pages/loadingPage.module.scss
+++ b/src/pages/loadingPage.module.scss
@@ -32,7 +32,9 @@
   }
 }
 
-.bg {
+.loadingPage {
+  width: 100%;
+  height: 100%;
   position: relative;
   background-color: hsla(258, 71%, 7%, 1);
   overflow: hidden;
